Fikser buggen at en linje ikke wrappes når den tar mer plass enn bredden

--- a/srcc/main/applikasjon/static/base.css
+++ b/srcc/main/applikasjon/static/base.css
@@ -143,7 +143,8 @@ img {
 }
 
 .tekst {
-    width: 550px;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 .midtseksjon {
